--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sucrase": "^3.13.0"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -33,6 +34,7 @@
     "firebase-admin": "^9.3.0",
     "http-status-codes": "^1.4.0",
     "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "mongoose": "^5.9.6"
   },
   "author": "João Wesley",
