--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,8 @@
         "${workspaceFolder}/**",
         "!**/node_modules/**"
     ],
+    "javascript.validate.enable": false,
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true,
+    },
 }
