--- a/package.json
+++ b/package.json
@@ -12,18 +12,23 @@
     "dev": "nodemon src/server.js",
     "build": "sucrase ./src -d ./dist --transforms imports",
     "start": "node dist/server.js",
-    "debug": "node --inspect-brk -r sucrase/register src/server.js"
+    "debug": "node --inspect-brk -r sucrase/register src/server.js",
+    "lint": " npx eslint --fix --ext js src/ &&  npx eslint --fix --ext js test/"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^7.1.2",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.6",
     "nyc": "^15.1.0",
+    "prettier": "^2.1.2",
     "sinon": "^9.0.2",
     "sinon-as-promised": "^4.0.3",
     "sinon-mongoose": "^2.3.0",
-    "sucrase": "^3.13.0"
+    "sucrase": "^3.16.0"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
@@ -35,7 +40,8 @@
     "http-status-codes": "^1.4.0",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
-    "mongoose": "^5.9.6"
+    "mongoose": "^5.9.6",
+    "standard": "^16.0.1"
   },
   "author": "João Wesley",
   "license": "ISC"
